testdata/errors/loader-invalidpackage.go
ppackage // syntax error

// ERROR: loader-invalidpackage.go:1:1: expected 'package', found ppackage
